samples/_failures_safe/1761510774_4d7e2e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_693fc0d2.c: In function ‘main’:
./samples/SAFE/__tmp_693fc0d2.c:147:24: error: missing terminating " character
  147 |                 printf("  [%s
      |                        ^~~~~~
./samples/SAFE/__tmp_693fc0d2.c:147:17: error: expected expression at end of input
  147 |                 printf("  [%s
      |                 ^~~~~~
./samples/SAFE/__tmp_693fc0d2.c:147:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_693fc0d2.c:147:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_693fc0d2.c:147:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_693fc0d2.c:147:17: error: expected declaration or statement at end of input
